# calculator-template

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: test.yml
app/: main.cpp
src/: BigCalculator.cpp  BigCalculator.h
